the issue was with how state was being passed up, having the state too high in the hierarchy of the app caused to many preceived dependencies on updates

--- a/src/components/CurrencyHistoryGraph.css
+++ b/src/components/CurrencyHistoryGraph.css
@@ -1,4 +1,4 @@
-.CurrencyHistoryGraph { 
+.ExchangeHistoryGraph { 
   background-color: #222222; 
   /* color: #fff;  */
 }
